{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "16664e85-1bf4-4015-93c3-2ce40f0d5b69",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "9477a233-fd0e-4f65-88c5-78c94e1ed849",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveBackward",
                    "type": "Button",
                    "id": "cdb291a3-ce62-487f-aada-d7de2178aab1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "8d9efdd5-0407-4bc7-bb15-4e0a7117ce95",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "6c8b102f-e83d-4c26-bea5-c59de92754be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrafeLeft",
                    "type": "Button",
                    "id": "3ed4c0c9-95c9-4624-9d9a-91d3035aa07a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "StrafeRight",
                    "type": "Button",
                    "id": "39e5995f-66a2-4532-8312-36682857001a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "620fe9fb-3793-4498-8543-49a73cfff104",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AlternateAttack",
                    "type": "Button",
                    "id": "62401c4a-8eef-43fc-a7d3-57936fe51157",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Wait",
                    "type": "Button",
                    "id": "04be57e9-1a21-4659-931a-fc5c6bba1ef9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "297e0b44-ce4a-4230-aa9f-963279b1e5ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c29642c9-afb0-4377-801d-fc277b59bf5e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "558854a5-a69a-4035-8de7-9ea01d75823d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "MoveBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "21ee269e-88d5-4492-8cc1-7d8c17108e31",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "e52439ed-9eee-4816-9b65-44c5d7cd758a",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "Keyboard+Mouse",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "1de5c7f7-6024-4688-90f9-2d185d1bc735",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "Keyboard+Mouse",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button With One Modifier",
                    "id": "e05b14a1-cfa2-4cf3-83cd-ab975eda8a95",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "26fa71ee-9669-494b-a418-8090d2a8ff29",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "Keyboard+Mouse",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button",
                    "id": "0a8f25b0-1ad4-45cc-9eb6-ba88d21f103a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "Keyboard+Mouse",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a87baf2b-856c-45c5-a2a8-18cb26dcc75c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "41514745-9766-4e1d-ac06-44efa394fe68",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "AlternateAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97f45843-6c11-47a4-8428-9575c0a021ad",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c008bcc-8e0f-4ceb-80bf-347f0ff437ff",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button With One Modifier",
                    "id": "07d1cd23-6023-448f-b534-aafc65d74899",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrafeLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "93e4e945-23a5-43db-80f2-d1e8e3eaeb5b",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "StrafeLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "89ba4e66-2146-4c36-af7e-423f14f49583",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "StrafeLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Button With One Modifier",
                    "id": "0e969400-d9ad-45c4-b0a9-5d4dc7ef4d84",
                    "path": "ButtonWithOneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrafeRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "2c92e2f4-97aa-4a29-921e-1784302a42c7",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "StrafeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "button",
                    "id": "7999ff8a-defa-462a-a458-1afa8e14963d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "StrafeRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "53772399-fff3-4edd-a696-92ffe96317c4",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard+Mouse",
                    "action": "Wait",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard+Mouse",
            "bindingGroup": "Keyboard+Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}